# pyPIPS

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/: 21cm.ipynb  21cm_tau.ipynb  CAMB_CMB.ipynb  CAMB_matter.ipynb
src/pyPIPS/: datasets.py  models.py  optimize.py
